Created 12-1, updated 11 projects

--- a/II-2 Point Comparator/.project
+++ b/II-2 Point Comparator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>II-2 Point Comparator</name>
+	<name>I1-2 Point Comparator</name>
 	<comment></comment>
 	<projects>
 	</projects>
