--- a/II-4 Student Grade File/.project
+++ b/II-4 Student Grade File/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>II-4 Student Grade File</name>
+	<name>I1-4 Student Grade File</name>
 	<comment></comment>
 	<projects>
 	</projects>
