--- a/II-1/.project
+++ b/II-1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>II-1 Dictionary Difference</name>
+	<name>I1-1 Dictionary Difference</name>
 	<comment></comment>
 	<projects>
 	</projects>
